--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,11 +35,13 @@ dist.jlink.output=${dist.jlink.dir}/Duan1_QuanLyDep
 excludes=
 file.reference.mssql-jdbc-12.2.0.jre11.jar=D:\\kiem thu nang cao\\Library\\mssql-jdbc-12.2.0.jre11.jar
 file.reference.mssql-jdbc-12.2.0.jre11.jar-1=C:\\Users\\asus\\Documents\\mssql-jdbc-12.2.0.jre11.jar
+file.reference.mssql-jdbc-7.2.2.jre8.jar=E:\\TaiLieuKetNoiSQL_AND_NETBEANS\\mssql-jdbc-7.2.2.jre8.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mssql-jdbc-12.2.0.jre11.jar}:\
-    ${file.reference.mssql-jdbc-12.2.0.jre11.jar-1}
+    ${file.reference.mssql-jdbc-12.2.0.jre11.jar-1}:\
+    ${file.reference.mssql-jdbc-7.2.2.jre8.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
