SanPham form thieu dcph23226 1/19/2024

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /nbproject/private/
 /build/
 /dist/
+/src/ViewModel/ASSIGNMENT_SOF2041_DATNVPH23213-20240115T132022Z-001/ASSIGNMENT_SOF2041_DATNVPH23213/build
